-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.1
-
None
There are several issues with input methods on Android, especially when using predictive text. This includes text corruption and wrong input of text. The symptoms differ depending on which software keyboard is used.
The Android 4.0 stock keyboard works reasonably well. The 4.3/4.4 keyboard works much worse. The SwiftKey keyboard is completely broken.
- relates to
-
QTBUG-35689 [QML/Android] TextField is not working with SwiftKey keyboard
-
- Closed
-
-
QTBUG-35518 Android: Strange keyboard behavior in code editor example
-
- Closed
-
-
QTBUG-37584 Android: predictive text input does not always add spaces between words
-
- Closed
-
-
QTBUG-37980 Android: GET_EXTRACTED_TEXT_MONITOR flag not supported
-
- Closed
-
For Gerrit Dashboard: QTBUG-37511 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
78880,4 | Android input method improvements | stable | qt/qtbase | Status: MERGED | +2 | 0 |
81053,1 | WIP input method change | stable | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
83337,1 | Implement the new inputmethod query API for Qt Quick | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |